--- a/style-resp.css
+++ b/style-resp.css
@@ -5,6 +5,10 @@
         width: auto;
         display: block;
     }
-   
+    img {
+        margin-top: 20px;
+        height: 100px;
+        
+    }
     
 }
