--- a/style-resp.css
+++ b/style-resp.css
@@ -10,5 +10,9 @@
         height: 100px;
         
     }
-    
+    #lezioni .row>.left,
+    #lezioni .row>.right {
+        width: 100%;
+    }
+
 }
