change position id-steps

--- a/style-resp.css
+++ b/style-resp.css
@@ -22,4 +22,12 @@
     #steps.container .row{
         background-color: white;
     }
+    #steps .row>.left,
+    #steps .row>.central,
+    #steps .row>.right {
+    display: block;
+    width: 100%;
+    margin-top: 0px;
+  
+    }
 }
