curtail margin text-img

--- a/style-resp.css
+++ b/style-resp.css
@@ -30,4 +30,10 @@
     margin-top: 0px;
   
     }
+    #why .row>.first,
+    #why .row>.second,
+    #why .row>.third {
+  
+    margin-top: 0;
+}
 }
